--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "deploy": "firebase deploy --only functions"
+    "start": "node scr/app.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
